--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -1,6 +1,7 @@
 development:
     domain:             localhost:3000
-    app_name:           Well Dressed Up
+    app_name:           Twarl
+    app_description:    A choice directory of independent designer/makers, producing bespoke commissions and exclusive lines of clothing, accessories & costumes.
     twitter_key:        
     twitter_secret:     
     facebook_key:       
@@ -11,7 +12,8 @@ development:
 
 test:
     domain:             test.host
-    app_name:           Well Dressed Up
+    app_name:           Twarl
+    app_description:    A choice directory of independent designer/makers, producing bespoke commissions and exclusive lines of clothing, accessories & costumes.
     twitter_key:        
     twitter_secret:     
     facebook_key:       
@@ -21,13 +23,6 @@ test:
     google_analytics:   
 
 production:
-    domain:             welldressedup.herokuapp.com
-    app_name:           Well Dressed Up
-    # FILL IN FOLLOWING LINES WITH REAL ACCOUNTS (POINTING TO HEROKU)
-    # google_analytics:   
-    # twitter_key:        
-    # twitter_secret:     
-    # facebook_key:       
-    # facebook_secret:    
-    # linked_in_key:      
-    # linked_in_secret:
+    domain:             twarl.herokuapp.com
+    app_name:           Twarl
+    app_description:    A choice directory of independent designer/makers, producing bespoke commissions and exclusive lines of clothing, accessories & costumes.
