--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -1,6 +1,7 @@
 development:
     domain:             localhost:3000
     app_name:           Twarl
+    app_tagline:        Get dressed up!
     app_description:    A choice directory of independent designer/makers, producing bespoke commissions and exclusive lines of clothing, accessories & costumes.
     twitter_key:        
     twitter_secret:     
@@ -13,6 +14,7 @@ development:
 test:
     domain:             test.host
     app_name:           Twarl
+    app_tagline:        Get dressed up!
     app_description:    A choice directory of independent designer/makers, producing bespoke commissions and exclusive lines of clothing, accessories & costumes.
     twitter_key:        
     twitter_secret:     
@@ -25,4 +27,5 @@ test:
 production:
     domain:             twarl.herokuapp.com
     app_name:           Twarl
+    app_tagline:        Get dressed up!
     app_description:    A choice directory of independent designer/makers, producing bespoke commissions and exclusive lines of clothing, accessories & costumes.
